[package]
name = "advent-of-code-2019"
version = "0.1.0"
authors = ["Niklas Adolfsson <niklasadolfsson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.2"
itertools = "0.8.2"
regex = "1.3.1"
lazy_static = "1.4.0"


[dev-dependencies]
criterion = "0.3.0"

[[bench]]
name = "bench"
harness = false
